# RPROM

./: README.md
Firmware/: CMakeLists.txt  rprom.c  version.h.in  version.i.in
Firmware/bootmenu/: .gitignore  REUSE.toml
Firmware/bootmenu/doc/: hposdump-c520.md
Firmware/bootmenu/images/: choice.i  choice.py  header.i  header.py
